; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_sparc64nbsd-nat.c_sparc64nbsd_supply_gregset.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_sparc64nbsd-nat.c_sparc64nbsd_supply_gregset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sparc_gregset = type { i32 }
%struct.regcache = type { i32 }

@current_gdbarch = common dso_local global i32 0, align 4
@sparc32nbsd_gregset = common dso_local global i32 0, align 4
@sparc64nbsd_gregset = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sparc_gregset*, %struct.regcache*, i32, i8*)* @sparc64nbsd_supply_gregset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sparc64nbsd_supply_gregset(%struct.sparc_gregset* %0, %struct.regcache* %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.sparc_gregset*, align 8
  %6 = alloca %struct.regcache*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store %struct.sparc_gregset* %0, %struct.sparc_gregset** %5, align 8
  store %struct.regcache* %1, %struct.regcache** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i32, i32* @current_gdbarch, align 4
  %11 = call i32 @gdbarch_ptr_bit(i32 %10)
  %12 = icmp eq i32 %11, 32
  %13 = zext i1 %12 to i32
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %9, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %4
  %17 = load %struct.regcache*, %struct.regcache** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i8*, i8** %8, align 8
  %20 = call i32 @sparc32_supply_gregset(i32* @sparc32nbsd_gregset, %struct.regcache* %17, i32 %18, i8* %19)
  br label %26

21:                                               ; preds = %4
  %22 = load %struct.regcache*, %struct.regcache** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i8*, i8** %8, align 8
  %25 = call i32 @sparc64_supply_gregset(i32* @sparc64nbsd_gregset, %struct.regcache* %22, i32 %23, i8* %24)
  br label %26

26:                                               ; preds = %21, %16
  ret void
}

declare dso_local i32 @gdbarch_ptr_bit(i32) #1

declare dso_local i32 @sparc32_supply_gregset(i32*, %struct.regcache*, i32, i8*) #1

declare dso_local i32 @sparc64_supply_gregset(i32*, %struct.regcache*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
